# learn-rust

./: .gitignore  Cargo.toml  README.md  README_TYPES.md  fizzbuzz.rs  hello  hello.rs  hello_parallel.rs
1.0/2_hello_world_cargo/src/: hello_world.rs
1.0/3_basics/: Cargo.toml
1.0/3_basics/src/: basics.rs
1.0/basics/src/: 1_hello_world.rs
book/1.0/basics/: basics.rs  pointers.rs
book/1.0/dining-philosophers/: README.md
book/1.0/hello_world/: Cargo.toml
book/1.0/hello_world/src/: hello_world.rs
book/pre-1.0/: functions.rs  matching.rs
books/blogs/: advent-of-code-2022.md
books/the-rust-programming-language/: basics.md  pointers-box.md  pointers-rc.md  pointers-refcell.md  pointers-weak.md  pointers.md  trait-Deref.md  trait-Drop.md
books/the-rust-programming-language/basics/: basics.rs  pointers.rs
books/the-rust-programming-language/examples/dining_philosophers/: Cargo.toml
books/the-rust-programming-language/examples/dining_philosophers/src/: main.rs
books/the-rust-programming-language/examples/guess/: Cargo.toml  readme.md
books/the-rust-programming-language/examples/guess/src/: main.rs
courses/building_reusable_code/: Cargo.toml
courses/building_reusable_code/src/examples/: dynamic_fibonnaci.rs  fibonnaci.rs  mod.rs
examples/lists/src/list/: linked_list.rs  mod.rs  ok_list.rs  persistent_immutable_list.rs
lists/: README.md
lists/src/: bad_list.rs  first.rs  lib.rs  ok_list.rs  persistent_immutable_list.rs
lists/src/list/: mod.rs  persistent_immutable_list.md
pre-1.0/: fizzbuzz.rs  hello_single.rs
